# lance-data-viewer

./: .gitignore  LICENSE  README.md  requirements_vectorizer.txt
.github/: FUNDING.yml
.github/workflows/: release.yml
backend/: app.py  constraints-0.16.0.txt  constraints-0.24.3.txt  constraints-0.3.1.txt  constraints-0.3.4.txt  constraints-0.5.txt  deps.txt  pyproject.toml  requirements.txt  serialize_value.py
docker/: Dockerfile  entrypoint.sh
web/: app.js  index.html  styles.css
web/vanilla/: app.js
